# cpp_project

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  TODO.md  conandata.yml  conanfile.py  justfile  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json  rust.Containerfile
.devcontainer/Containerfiles/: base.Containerfile  cpp.Containerfile  cpp.Containerfile.in  rust.Containerfile.in
cmake/: ClangTidy.cmake  CompileOptions.cmake  CompileWarnings.cmake  InterproceduralOptimization.cmake  LinkOptions.cmake  Modules.cmake  Sanitizers.cmake  StandardLibrary.cmake
conan/: conandata.yml  conanfile.py  settings_user.yml
conan/profiles/: host
docs/: CMakeLists.txt
src/: CMakeLists.txt  README.md  main.cc  main.ccm  main.cpp  main.cppm  mathematics.cc  mathematics.ccm  mathematics.cppm  mathematics.h  my_module.cppm  print.cppm  uses_print.cppm
src/cmake/: LLVM.cmake
src/library_usage/: CMakeLists.txt  main.cpp  mathematics.cppm
src/library_usage/mathematics/: lib.cppm  mod.cppm
src/toy/: CMakeLists.txt  LLVM.cmake  ast.cppm  lexer.cppm  lib.cppm  macros.hpp  main.cpp  main.cppm  parser.cppm  tmp.cpp  toyc.cppm
src/toy/ast/: dumper.cppm  mod.cppm
src/toy/cmake/: LLVM.cmake
src/toy/lexer/: mod.cppm
src/toy/parser/: ast-impl.cpp  ast.cppm  mod.cppm
src/toy/utility/: mod.cppm  print.cppm  stacktrace.cppm
submodules/: justfile
tests/: CMakeLists.txt  mathematics.cc  mathematics.cppm  test_main.hpp
tests/library_usage/: CMakeLists.txt
tests/library_usage/mathematics/: test.cpp  test.cppm
tests/toy/: CMakeLists.txt
